[package]
name = "grep-cli"
version = "0.1.0"
authors = ["Takuya OHASHI <tky.ohashi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
grep-core = { git = "https://github.com/takuyaohashi/grep-core" }